# TeleAPI

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  prd.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Channels.tsx  ConfigCheck.tsx  Dashboard.tsx  Login.tsx  Messages.tsx  SyncJobs.tsx  WebhookLogs.tsx
src/teleapi/: auth.py  config.py  database.py  main.py
src/teleapi/api/: auth_routes.py  channels.py  messages.py  sync.py  system.py  webhooks.py
src/teleapi/models/: __init__.py  channel.py  message.py  sync_job.py  webhook_delivery.py
src/teleapi/services/: event.py  filter.py  webhook.py
src/teleapi/telegram/: channel_manager.py  client.py  listener.py  login.py  normalizer.py  sync.py
tests/: conftest.py
tests/api/: test_auth_routes.py  test_channels_api.py  test_health.py  test_messages_api.py  test_sync_api.py  test_system_api.py  test_webhooks_api.py
tests/db/: test_database.py  test_models.py
tests/e2e/: test_full_flow.py  test_lifespan.py
tests/services/: test_channel_manager.py  test_client.py  test_listener.py  test_login_phone.py  test_login_qr.py  test_sync.py  test_webhook.py
tests/unit/: test_auth.py  test_config.py  test_cursor.py  test_event.py  test_filter.py  test_normalizer.py
