[project]
name = "teleapi"
version = "0.1.0"
description = "A lightweight Telegram channel API gateway"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.21",
    "telethon>=1.40",
    "pyyaml>=6.0",
    "httpx[socks]>=0.28",
    "qrcode[pil]>=8.0",
    "cryptography>=44.0",
    "greenlet>=3.0",
]

[project.scripts]
teleapi = "teleapi.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teleapi"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: 纯逻辑测试",
    "db: 内存数据库测试",
    "service: 服务层测试（mock 外部依赖）",
    "api: API 路由测试",
    "e2e: 端到端流程测试",
]
